[package]
name = "raycasting-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "3.3.2"
rayon = "1.10.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["gfx", "ttf"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "renderer"
bench = true
harness = false
