[package]
name = "raycasting-rs"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
description = "Showcase of the classic Wolfenstein 3D raycasting technique built in Rust"
repository = "https://github.com/adrior11/raycasting-rs"
readme = "README.md"
license = "MIT"

[dependencies]
bon = "3.3.2"
rayon = "1.10.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "renderer"
bench = true
harness = false
